add image and update projects

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,23 +1,23 @@
 [
     {
-      "title": "Player Rankings Dashboard",
-      "slug": "player-dashboard",
-      "summary": "Decile ribbons, pace tracker, and cohort analytics for 12U USTA.",
-      "tech": ["React", "ECharts", "IndexedDB"],
+      "title": "USTA Tournament Finder",
+      "slug": "tournament-finder",
+      "summary": "Quickly find USTA tournaments by location, date, level, and age.",
+      "tech": ["R", "Shiny", "Geocoding"],
       "domain": ["Tennis", "DataViz"],
-      "demoUrl": "https://example.com/player-dashboard",
+      "demoUrl": "https://shj6yf-trevor-riley.shinyapps.io/USTA_Tournaments/",
       "codeUrl": "https://github.com/you/player-dashboard",
       "status": "live",
-      "thumbnail": "",
+      "thumbnail": "thumbs/tournament-finder.png",
       "year": 2025,
-      "badges": ["USTA 12U", "Velocity", "Acceleration"]
+      "badges": ["USTA 12U", "Mapping"]
     },
     {
       "title": "ATP Globe",
       "slug": "atp-globe",
       "summary": "Explore 2025 ATP Tournaments on a 3D globe.",
-      "tech": ["Three.js", "GeoJSON"],
-      "domain": ["Tennis", "3D"],
+      "tech": ["React", "Geocoding", "D3"],
+      "domain": ["Tennis", "Education"],
       "demoUrl": "https://tnriley.github.io/2025-ATP-Tournament-Explorer/",
       "codeUrl": "https://github.com/TNRiley/2025-ATP-Tournament-Explorer?tab=readme-ov-file",
       "status": "live",
@@ -26,14 +26,14 @@
       "badges": ["3D", "Mapping"]
     },
     {
-      "title": "Evidence Library",
-      "slug": "evidence-library",
-      "summary": "Curated, searchable evidence for coaches & researchers.",
-      "tech": ["R Shiny", "Database"],
-      "domain": ["Research", "Data"],
-      "demoUrl": "https://example.com/evidence-library",
-      "codeUrl": "https://github.com/you/evidence-library",
-      "status": "live",
+      "title": "Player Dashboard",
+      "slug": "player-dashboard",
+      "summary": "Player performance dashboard for USTA 12U players.",
+      "tech": ["React", "Echarts"],
+      "domain": ["DataViz", "Tennis"],
+      "demoUrl": "https://github.com/TNRiley",
+      "codeUrl": "https://github.com/TNRiley",
+      "status": "Coming Soon",
       "thumbnail": "",
       "year": 2025,
       "badges": ["Search", "Curation"]
